overlapping issue corrected

--- a/src/components/Track.css
+++ b/src/components/Track.css
@@ -28,11 +28,11 @@
 }
 
 .child-icon{
-
-
+    
     position:relative;
     width:10%;
-    height:100%
+    height:100%;
+    z-index: 0;
 }
 
 
@@ -41,6 +41,8 @@
     width:100%;
     top:50%;
     transform: translateY(-50%);
+    transform: translateZ(-100%);
+    z-index: 0;
 }
 
 .image2 {
@@ -49,11 +51,12 @@
     left: 50%;
     transform: translateY(-50%);
     transform: translateX(-50%);
+    z-index: 0;
     cursor: pointer;
 }
 
 .child-name{
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .child-artist{
@@ -63,9 +66,6 @@
 .child-features{
     width: 7%;
     float: right;
-}
-.child-name{
-    font-size: 25px;
 }
 
 /* Make it a marquee */
